Adds testing to the github ci